--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -d --watch",
     "start": "webpack-dev-server",
-    "server": "nodemon -w ./server/app.js"
+    "server": "nodemon ./server/server.js"
   },
   "author": "Jennie Zeng",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "sequelize": "^5.8.12"
