--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "sequelize": "^5.8.12"
